parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> ZMIENNA ID SEMICOLON
Rule 5     statement -> ID EQUALS expression SEMICOLON
Rule 6     statement -> WYPISZ wypisz_expr SEMICOLON
Rule 7     wypisz_expr -> wypisz_expr PLUS wypisz_term
Rule 8     wypisz_expr -> wypisz_term
Rule 9     wypisz_term -> STRING
Rule 10    wypisz_term -> ID
Rule 11    expression -> expression PLUS term
Rule 12    expression -> expression MINUS term
Rule 13    expression -> term
Rule 14    term -> term TIMES factor
Rule 15    term -> term DIVIDE factor
Rule 16    term -> factor
Rule 17    factor -> NUMBER
Rule 18    factor -> ID
Rule 19    condition -> expression EQ expression
Rule 20    condition -> expression LT expression
Rule 21    condition -> expression GT expression
Rule 22    condition -> expression LE expression
Rule 23    condition -> expression GE expression
Rule 24    condition -> condition I condition
Rule 25    condition -> condition LUB condition
Rule 26    condition -> NIE condition
Rule 27    statement -> JEZELI LPAREN condition RPAREN WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
Rule 28    statement -> JEZELI LPAREN condition RPAREN WTEDY LBRACE statements RBRACE SEMICOLON
Rule 29    statement -> WCZYTAJ ID SEMICOLON
Rule 30    statement -> DOPOKI LPAREN condition RPAREN WYKONUJ LBRACE statements RBRACE SEMICOLON
Rule 31    statement -> PLUS PLUS ID SEMICOLON
Rule 32    statement -> MINUS MINUS ID SEMICOLON

Terminals, with rules where they appear

DIVIDE               : 15
DOPOKI               : 30
EQ                   : 19
EQUALS               : 5
GE                   : 23
GT                   : 21
I                    : 24
ID                   : 4 5 10 18 29 31 32
INACZEJ              : 27
JEZELI               : 27 28
LBRACE               : 27 27 28 30
LE                   : 22
LPAREN               : 27 28 30
LT                   : 20
LUB                  : 25
MINUS                : 12 32 32
NIE                  : 26
NUMBER               : 17
PLUS                 : 7 11 31 31
RBRACE               : 27 27 28 30
RPAREN               : 27 28 30
SEMICOLON            : 4 5 6 27 28 29 30 31 32
STRING               : 9
TIMES                : 14
WCZYTAJ              : 29
WTEDY                : 27 28
WYKONUJ              : 30
WYPISZ               : 6
ZMIENNA              : 4
error                : 

Nonterminals, with rules where they appear

condition            : 24 24 25 25 26 27 28 30
expression           : 5 11 12 19 19 20 20 21 21 22 22 23 23
factor               : 14 15 16
program              : 0
statement            : 2 3
statements           : 1 3 27 27 28 30
term                 : 11 12 13 14 15
wypisz_expr          : 6 7
wypisz_term          : 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . ZMIENNA ID SEMICOLON
    (5) statement -> . ID EQUALS expression SEMICOLON
    (6) statement -> . WYPISZ wypisz_expr SEMICOLON
    (27) statement -> . JEZELI LPAREN condition RPAREN WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
    (28) statement -> . JEZELI LPAREN condition RPAREN WTEDY LBRACE statements RBRACE SEMICOLON
    (29) statement -> . WCZYTAJ ID SEMICOLON
    (30) statement -> . DOPOKI LPAREN condition RPAREN WYKONUJ LBRACE statements RBRACE SEMICOLON
    (31) statement -> . PLUS PLUS ID SEMICOLON
    (32) statement -> . MINUS MINUS ID SEMICOLON

    ZMIENNA         shift and go to state 4
    ID              shift and go to state 5
    WYPISZ          shift and go to state 6
    JEZELI          shift and go to state 7
    WCZYTAJ         shift and go to state 8
    DOPOKI          shift and go to state 9
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . ZMIENNA ID SEMICOLON
    (5) statement -> . ID EQUALS expression SEMICOLON
    (6) statement -> . WYPISZ wypisz_expr SEMICOLON
    (27) statement -> . JEZELI LPAREN condition RPAREN WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
    (28) statement -> . JEZELI LPAREN condition RPAREN WTEDY LBRACE statements RBRACE SEMICOLON
    (29) statement -> . WCZYTAJ ID SEMICOLON
    (30) statement -> . DOPOKI LPAREN condition RPAREN WYKONUJ LBRACE statements RBRACE SEMICOLON
    (31) statement -> . PLUS PLUS ID SEMICOLON
    (32) statement -> . MINUS MINUS ID SEMICOLON

    $end            reduce using rule 1 (program -> statements .)
    ZMIENNA         shift and go to state 4
    ID              shift and go to state 5
    WYPISZ          shift and go to state 6
    JEZELI          shift and go to state 7
    WCZYTAJ         shift and go to state 8
    DOPOKI          shift and go to state 9
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11

    statement                      shift and go to state 12

state 3

    (2) statements -> statement .

    ZMIENNA         reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    WYPISZ          reduce using rule 2 (statements -> statement .)
    JEZELI          reduce using rule 2 (statements -> statement .)
    WCZYTAJ         reduce using rule 2 (statements -> statement .)
    DOPOKI          reduce using rule 2 (statements -> statement .)
    PLUS            reduce using rule 2 (statements -> statement .)
    MINUS           reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> ZMIENNA . ID SEMICOLON

    ID              shift and go to state 13


state 5

    (5) statement -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 14


state 6

    (6) statement -> WYPISZ . wypisz_expr SEMICOLON
    (7) wypisz_expr -> . wypisz_expr PLUS wypisz_term
    (8) wypisz_expr -> . wypisz_term
    (9) wypisz_term -> . STRING
    (10) wypisz_term -> . ID

    STRING          shift and go to state 17
    ID              shift and go to state 18

    wypisz_expr                    shift and go to state 15
    wypisz_term                    shift and go to state 16

state 7

    (27) statement -> JEZELI . LPAREN condition RPAREN WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
    (28) statement -> JEZELI . LPAREN condition RPAREN WTEDY LBRACE statements RBRACE SEMICOLON

    LPAREN          shift and go to state 19


state 8

    (29) statement -> WCZYTAJ . ID SEMICOLON

    ID              shift and go to state 20


state 9

    (30) statement -> DOPOKI . LPAREN condition RPAREN WYKONUJ LBRACE statements RBRACE SEMICOLON

    LPAREN          shift and go to state 21


state 10

    (31) statement -> PLUS . PLUS ID SEMICOLON

    PLUS            shift and go to state 22


state 11

    (32) statement -> MINUS . MINUS ID SEMICOLON

    MINUS           shift and go to state 23


state 12

    (3) statements -> statements statement .

    ZMIENNA         reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    WYPISZ          reduce using rule 3 (statements -> statements statement .)
    JEZELI          reduce using rule 3 (statements -> statements statement .)
    WCZYTAJ         reduce using rule 3 (statements -> statements statement .)
    DOPOKI          reduce using rule 3 (statements -> statements statement .)
    PLUS            reduce using rule 3 (statements -> statements statement .)
    MINUS           reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    RBRACE          reduce using rule 3 (statements -> statements statement .)


state 13

    (4) statement -> ZMIENNA ID . SEMICOLON

    SEMICOLON       shift and go to state 24


state 14

    (5) statement -> ID EQUALS . expression SEMICOLON
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    expression                     shift and go to state 26
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 15

    (6) statement -> WYPISZ wypisz_expr . SEMICOLON
    (7) wypisz_expr -> wypisz_expr . PLUS wypisz_term

    SEMICOLON       shift and go to state 30
    PLUS            shift and go to state 31


state 16

    (8) wypisz_expr -> wypisz_term .

    SEMICOLON       reduce using rule 8 (wypisz_expr -> wypisz_term .)
    PLUS            reduce using rule 8 (wypisz_expr -> wypisz_term .)


state 17

    (9) wypisz_term -> STRING .

    SEMICOLON       reduce using rule 9 (wypisz_term -> STRING .)
    PLUS            reduce using rule 9 (wypisz_term -> STRING .)


state 18

    (10) wypisz_term -> ID .

    SEMICOLON       reduce using rule 10 (wypisz_term -> ID .)
    PLUS            reduce using rule 10 (wypisz_term -> ID .)


state 19

    (27) statement -> JEZELI LPAREN . condition RPAREN WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
    (28) statement -> JEZELI LPAREN . condition RPAREN WTEDY LBRACE statements RBRACE SEMICOLON
    (19) condition -> . expression EQ expression
    (20) condition -> . expression LT expression
    (21) condition -> . expression GT expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . condition I condition
    (25) condition -> . condition LUB condition
    (26) condition -> . NIE condition
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NIE             shift and go to state 34
    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    condition                      shift and go to state 32
    expression                     shift and go to state 33
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 20

    (29) statement -> WCZYTAJ ID . SEMICOLON

    SEMICOLON       shift and go to state 35


state 21

    (30) statement -> DOPOKI LPAREN . condition RPAREN WYKONUJ LBRACE statements RBRACE SEMICOLON
    (19) condition -> . expression EQ expression
    (20) condition -> . expression LT expression
    (21) condition -> . expression GT expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . condition I condition
    (25) condition -> . condition LUB condition
    (26) condition -> . NIE condition
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NIE             shift and go to state 34
    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    condition                      shift and go to state 36
    expression                     shift and go to state 33
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 22

    (31) statement -> PLUS PLUS . ID SEMICOLON

    ID              shift and go to state 37


state 23

    (32) statement -> MINUS MINUS . ID SEMICOLON

    ID              shift and go to state 38


state 24

    (4) statement -> ZMIENNA ID SEMICOLON .

    ZMIENNA         reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    ID              reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    WYPISZ          reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    JEZELI          reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    WCZYTAJ         reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    DOPOKI          reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    PLUS            reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    MINUS           reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    $end            reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> ZMIENNA ID SEMICOLON .)


state 25

    (18) factor -> ID .

    TIMES           reduce using rule 18 (factor -> ID .)
    DIVIDE          reduce using rule 18 (factor -> ID .)
    SEMICOLON       reduce using rule 18 (factor -> ID .)
    PLUS            reduce using rule 18 (factor -> ID .)
    MINUS           reduce using rule 18 (factor -> ID .)
    EQ              reduce using rule 18 (factor -> ID .)
    LT              reduce using rule 18 (factor -> ID .)
    GT              reduce using rule 18 (factor -> ID .)
    LE              reduce using rule 18 (factor -> ID .)
    GE              reduce using rule 18 (factor -> ID .)
    RPAREN          reduce using rule 18 (factor -> ID .)
    I               reduce using rule 18 (factor -> ID .)
    LUB             reduce using rule 18 (factor -> ID .)


state 26

    (5) statement -> ID EQUALS expression . SEMICOLON
    (11) expression -> expression . PLUS term
    (12) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 27

    (13) expression -> term .
    (14) term -> term . TIMES factor
    (15) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 13 (expression -> term .)
    PLUS            reduce using rule 13 (expression -> term .)
    MINUS           reduce using rule 13 (expression -> term .)
    EQ              reduce using rule 13 (expression -> term .)
    LT              reduce using rule 13 (expression -> term .)
    GT              reduce using rule 13 (expression -> term .)
    LE              reduce using rule 13 (expression -> term .)
    GE              reduce using rule 13 (expression -> term .)
    RPAREN          reduce using rule 13 (expression -> term .)
    I               reduce using rule 13 (expression -> term .)
    LUB             reduce using rule 13 (expression -> term .)
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43


state 28

    (16) term -> factor .

    TIMES           reduce using rule 16 (term -> factor .)
    DIVIDE          reduce using rule 16 (term -> factor .)
    SEMICOLON       reduce using rule 16 (term -> factor .)
    PLUS            reduce using rule 16 (term -> factor .)
    MINUS           reduce using rule 16 (term -> factor .)
    EQ              reduce using rule 16 (term -> factor .)
    LT              reduce using rule 16 (term -> factor .)
    GT              reduce using rule 16 (term -> factor .)
    LE              reduce using rule 16 (term -> factor .)
    GE              reduce using rule 16 (term -> factor .)
    RPAREN          reduce using rule 16 (term -> factor .)
    I               reduce using rule 16 (term -> factor .)
    LUB             reduce using rule 16 (term -> factor .)


state 29

    (17) factor -> NUMBER .

    TIMES           reduce using rule 17 (factor -> NUMBER .)
    DIVIDE          reduce using rule 17 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 17 (factor -> NUMBER .)
    PLUS            reduce using rule 17 (factor -> NUMBER .)
    MINUS           reduce using rule 17 (factor -> NUMBER .)
    EQ              reduce using rule 17 (factor -> NUMBER .)
    LT              reduce using rule 17 (factor -> NUMBER .)
    GT              reduce using rule 17 (factor -> NUMBER .)
    LE              reduce using rule 17 (factor -> NUMBER .)
    GE              reduce using rule 17 (factor -> NUMBER .)
    RPAREN          reduce using rule 17 (factor -> NUMBER .)
    I               reduce using rule 17 (factor -> NUMBER .)
    LUB             reduce using rule 17 (factor -> NUMBER .)


state 30

    (6) statement -> WYPISZ wypisz_expr SEMICOLON .

    ZMIENNA         reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    ID              reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    WYPISZ          reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    JEZELI          reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    WCZYTAJ         reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    DOPOKI          reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    PLUS            reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    MINUS           reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    $end            reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)
    RBRACE          reduce using rule 6 (statement -> WYPISZ wypisz_expr SEMICOLON .)


state 31

    (7) wypisz_expr -> wypisz_expr PLUS . wypisz_term
    (9) wypisz_term -> . STRING
    (10) wypisz_term -> . ID

    STRING          shift and go to state 17
    ID              shift and go to state 18

    wypisz_term                    shift and go to state 44

state 32

    (27) statement -> JEZELI LPAREN condition . RPAREN WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
    (28) statement -> JEZELI LPAREN condition . RPAREN WTEDY LBRACE statements RBRACE SEMICOLON
    (24) condition -> condition . I condition
    (25) condition -> condition . LUB condition

    RPAREN          shift and go to state 45
    I               shift and go to state 46
    LUB             shift and go to state 47


state 33

    (19) condition -> expression . EQ expression
    (20) condition -> expression . LT expression
    (21) condition -> expression . GT expression
    (22) condition -> expression . LE expression
    (23) condition -> expression . GE expression
    (11) expression -> expression . PLUS term
    (12) expression -> expression . MINUS term

    EQ              shift and go to state 48
    LT              shift and go to state 49
    GT              shift and go to state 50
    LE              shift and go to state 51
    GE              shift and go to state 52
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 34

    (26) condition -> NIE . condition
    (19) condition -> . expression EQ expression
    (20) condition -> . expression LT expression
    (21) condition -> . expression GT expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . condition I condition
    (25) condition -> . condition LUB condition
    (26) condition -> . NIE condition
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NIE             shift and go to state 34
    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    condition                      shift and go to state 53
    expression                     shift and go to state 33
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 35

    (29) statement -> WCZYTAJ ID SEMICOLON .

    ZMIENNA         reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    ID              reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    WYPISZ          reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    JEZELI          reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    WCZYTAJ         reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    DOPOKI          reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    PLUS            reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    MINUS           reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    $end            reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)
    RBRACE          reduce using rule 29 (statement -> WCZYTAJ ID SEMICOLON .)


state 36

    (30) statement -> DOPOKI LPAREN condition . RPAREN WYKONUJ LBRACE statements RBRACE SEMICOLON
    (24) condition -> condition . I condition
    (25) condition -> condition . LUB condition

    RPAREN          shift and go to state 54
    I               shift and go to state 46
    LUB             shift and go to state 47


state 37

    (31) statement -> PLUS PLUS ID . SEMICOLON

    SEMICOLON       shift and go to state 55


state 38

    (32) statement -> MINUS MINUS ID . SEMICOLON

    SEMICOLON       shift and go to state 56


state 39

    (5) statement -> ID EQUALS expression SEMICOLON .

    ZMIENNA         reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    ID              reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    WYPISZ          reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    JEZELI          reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    WCZYTAJ         reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    DOPOKI          reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    PLUS            reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    MINUS           reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    $end            reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)


state 40

    (11) expression -> expression PLUS . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    term                           shift and go to state 57
    factor                         shift and go to state 28

state 41

    (12) expression -> expression MINUS . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    term                           shift and go to state 58
    factor                         shift and go to state 28

state 42

    (14) term -> term TIMES . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    factor                         shift and go to state 59

state 43

    (15) term -> term DIVIDE . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    factor                         shift and go to state 60

state 44

    (7) wypisz_expr -> wypisz_expr PLUS wypisz_term .

    SEMICOLON       reduce using rule 7 (wypisz_expr -> wypisz_expr PLUS wypisz_term .)
    PLUS            reduce using rule 7 (wypisz_expr -> wypisz_expr PLUS wypisz_term .)


state 45

    (27) statement -> JEZELI LPAREN condition RPAREN . WTEDY LBRACE statements RBRACE INACZEJ LBRACE statements RBRACE SEMICOLON
    (28) statement -> JEZELI LPAREN condition RPAREN . WTEDY LBRACE statements RBRACE SEMICOLON

    WTEDY           shift and go to state 61


state 46

    (24) condition -> condition I . condition
    (19) condition -> . expression EQ expression
    (20) condition -> . expression LT expression
    (21) condition -> . expression GT expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . condition I condition
    (25) condition -> . condition LUB condition
    (26) condition -> . NIE condition
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NIE             shift and go to state 34
    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    condition                      shift and go to state 62
    expression                     shift and go to state 33
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 47

    (25) condition -> condition LUB . condition
    (19) condition -> . expression EQ expression
    (20) condition -> . expression LT expression
    (21) condition -> . expression GT expression
    (22) condition -> . expression LE expression
    (23) condition -> . expression GE expression
    (24) condition -> . condition I condition
    (25) condition -> . condition LUB condition
    (26) condition -> . NIE condition
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NIE             shift and go to state 34
    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    condition                      shift and go to state 63
    expression                     shift and go to state 33
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 48

    (19) condition -> expression EQ . expression
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    expression                     shift and go to state 64
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 49

    (20) condition -> expression LT . expression
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    expression                     shift and go to state 65
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 50

    (21) condition -> expression GT . expression
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

    expression                     shift and go to state 66
    term                           shift and go to state 27
    factor                         shift and go to state 28

state 51

    (22) condition -> expression LE . expression
    (11) expression -> . expression PLUS term
    (12) expression -> . expression MINUS term
    (13) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (16) term -> . factor
    (17) factor -> . NUMBER
    (18) factor -> . ID

    NUMBER          shift and go to state 29
    ID              shift and go to state 25

